peac_dev/force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>Custom Object created so we can use Queue functionality</description>
    <label>Contract</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>