peac_dev/force-app/main/default/objects/Contract__c/fields/Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acceptance Date</label>
    <type>Date</type>
</CustomField>