peac_dev/force-app/main/default/objects/Contract__c/fields/Account_Distribution_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Distribution_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Distribution Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>