peac_dev/force-app/main/default/objects/Contract__c/fields/Account_Level_Collection_Agent__c.field-meta.xml
<CustomField>
    <fullName>Account_Level_Collection_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account-Level Collection Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts_alca</relationshipName>
    <type>Lookup</type>
</CustomField>