peac_dev/force-app/main/default/objects/Contract__c/fields/Account_Level_Collection_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Level_Collection_Group__c</fullName>
    <formula>IF(OR(IsXBS__c ,  Lessor_Code__c  = &quot;101&quot;, Lessor_Code__c  = &quot;102&quot;, Lessor_Code__c  = &quot;471&quot; ) ,Customer__r.XBS_Collection_Group__c ,Customer__r.Collection_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account-Level Collection Group</label>
    <type>Text</type>
</CustomField>