peac_dev/force-app/main/default/objects/Contract__c/fields/AcctLvl_Highest_Delinquency_Contract__c.field-meta.xml
<CustomField>
    <fullName>AcctLvl_Highest_Delinquency_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account-Level Highest Delinquency Contra</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Contracts_alhdc</relationshipName>
    <type>Lookup</type>
</CustomField>