peac_dev/force-app/main/default/objects/Contract__c/fields/Activated_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Activated_By_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activated By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Custom_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>