peac_dev/force-app/main/default/objects/Contract__c/fields/Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Activated_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activated Date</label>
    <type>DateTime</type>
</CustomField>