peac_dev/force-app/main/default/objects/Contract__c/fields/Active_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Active_Funding_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Funding Source</label>
    <type>Checkbox</type>
</CustomField>