peac_dev/force-app/main/default/objects/Contract__c/fields/Active_Funding_Source_Verified__c.field-meta.xml
<CustomField>
    <fullName>Active_Funding_Source_Verified__c</fullName>
    <description>SL-1973</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Funding Source Verified</label>
    <type>Date</type>
</CustomField>