peac_dev/force-app/main/default/objects/Contract__c/fields/Active_Service_Billable__c.field-meta.xml
<CustomField>
    <fullName>Active_Service_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used in to SL_ContractMiscBillableTriggerHandler, If there is an active misc. billable with GL code 0017 the field is checked as true</description>
    <label>Active Service Billable</label>
    <type>Checkbox</type>
</CustomField>