peac_dev/force-app/main/default/objects/Contract__c/fields/Address_3__c.field-meta.xml
<CustomField>
    <fullName>Address_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>