peac_dev/force-app/main/default/objects/Contract__c/fields/Agent_Lock__c.field-meta.xml
<CustomField>
    <fullName>Agent_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Lock</label>
    <type>Checkbox</type>
</CustomField>