peac_dev/force-app/main/default/objects/Contract__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Custom_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>