peac_dev/force-app/main/default/objects/Contract__c/fields/Amount_Charged_Off__c.field-meta.xml
<CustomField>
    <fullName>Amount_Charged_Off__c</fullName>
    <description>Amount Charged Off</description>
    <label>Amount Charged Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>