peac_dev/force-app/main/default/objects/Contract__c/fields/AR_Address_2__c.field-meta.xml
<CustomField>
    <fullName>AR_Address_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AR Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>