peac_dev/force-app/main/default/objects/Contract__c/fields/AR_City__c.field-meta.xml
<CustomField>
    <fullName>AR_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AR City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>