peac_dev/force-app/main/default/objects/Contract__c/fields/AR_State__c.field-meta.xml
<CustomField>
    <fullName>AR_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AR State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>