peac_dev/force-app/main/default/objects/Contract__c/fields/AR_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>AR_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AR Zip Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>