peac_dev/force-app/main/default/objects/Contract__c/fields/Archived_Collateral_File__c.field-meta.xml
<CustomField>
    <fullName>Archived_Collateral_File__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Archived Collateral File</label>
    <type>TextArea</type>
</CustomField>