peac_dev/force-app/main/default/objects/Contract__c/fields/Asset_Management_Notes__c.field-meta.xml
<CustomField>
    <fullName>Asset_Management_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Management Notes</label>
    <type>TextArea</type>
</CustomField>