peac_dev/force-app/main/default/objects/Contract__c/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attention</label>
    <length>80</length>
    <type>Text</type>
</CustomField>