peac_dev/force-app/main/default/objects/Contract__c/fields/Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>