peac_dev/force-app/main/default/objects/Contract__c/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>