peac_dev/force-app/main/default/objects/Contract__c/fields/Bankrupt_Party__c.field-meta.xml
<CustomField>
    <fullName>Bankrupt_Party__c</fullName>
    <label>Bankrupt Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corp</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>CG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>