peac_dev/force-app/main/default/objects/Contract__c/fields/Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy__c</fullName>
    <formula>Customer__r.Bankruptcy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bankruptcy</label>
    <type>Checkbox</type>
</CustomField>