peac_dev/force-app/main/default/objects/Contract__c/fields/Bankruptcy_Case__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Case__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bankruptcy Case #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>