peac_dev/force-app/main/default/objects/Contract__c/fields/Bankruptcy_Chapter__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Chapter__c</fullName>
    <label>Bankruptcy Chapter</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>