peac_dev/force-app/main/default/objects/Contract__c/fields/Bankruptcy_Memo__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Memo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bankruptcy Memo</label>
    <type>TextArea</type>
</CustomField>