peac_dev/force-app/main/default/objects/Contract__c/fields/Bar_Date__c.field-meta.xml
<CustomField>
    <fullName>Bar_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bar Date</label>
    <type>Date</type>
</CustomField>