peac_dev/force-app/main/default/objects/Contract__c/fields/Behavioral_Score__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Score__c</fullName>
    <formula>Customer__r.Behavioral_Score__c</formula>
    <label>Behavioral Score</label>
    <type>Text</type>
</CustomField>