peac_dev/force-app/main/default/objects/Contract__c/fields/Billed_charges_if_necessary__c.field-meta.xml
<CustomField>
    <fullName>Billed_charges_if_necessary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billed Charges if Necessary</label>
    <type>Date</type>
</CustomField>