peac_dev/force-app/main/default/objects/Contract__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>