peac_dev/force-app/main/default/objects/Contract__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Branch Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00001</fullName>
                <label>NJ1 Retail</label>
            </value>
            <value>
                <fullName>00002</fullName>
                <label>Broker</label>
            </value>
            <value>
                <fullName>00003</fullName>
                <label>National Accounts</label>
            </value>
            <value>
                <fullName>00004</fullName>
                <label>Office Equip Group-OEG</label>
            </value>
            <value>
                <fullName>00005</fullName>
                <label>Healthcare Division</label>
            </value>
            <value>
                <fullName>00006</fullName>
                <label>Colorado Retail</label>
            </value>
            <value>
                <fullName>00007</fullName>
                <label>Georgia Retail</label>
            </value>
            <value>
                <fullName>00008</fullName>
                <label>Illinois Retail</label>
            </value>
            <value>
                <fullName>00009</fullName>
                <label>NJ2 Retail</label>
            </value>
            <value>
                <fullName>00010</fullName>
                <label>NJ1 - Nat&apos;l/Retail</label>
            </value>
            <value>
                <fullName>00011</fullName>
                <label>&gt;$50K Business Developmen</label>
            </value>
            <value>
                <fullName>00012</fullName>
                <label>SNAP (National Accounts)</label>
            </value>
            <value>
                <fullName>00013</fullName>
                <label>End User</label>
            </value>
            <value>
                <fullName>00014</fullName>
                <label>EU - Major Accounts</label>
            </value>
            <value>
                <fullName>00015</fullName>
                <label>Industrial Finance Group</label>
            </value>
            <value>
                <fullName>00016</fullName>
                <label>Major Accounts</label>
            </value>
            <value>
                <fullName>00017</fullName>
                <label>Franchise</label>
            </value>
            <value>
                <fullName>00018</fullName>
                <label>TFG-Transportation Financ</label>
            </value>
            <value>
                <fullName>00019</fullName>
                <label>Direct - End User</label>
            </value>
            <value>
                <fullName>00020</fullName>
                <label>IFP - Indirect Funding Pl</label>
            </value>
            <value>
                <fullName>00025</fullName>
                <label>HKF Horizon Keystone Fin</label>
            </value>
            <value>
                <fullName>00026</fullName>
                <label>Commercial Vehicle Group</label>
            </value>
            <value>
                <fullName>00030</fullName>
                <label>Union Bank</label>
            </value>
            <value>
                <fullName>00035</fullName>
                <label>Union Bank - Major Accts</label>
            </value>
            <value>
                <fullName>00040</fullName>
                <label>OEG/NATIONAL</label>
            </value>
            <value>
                <fullName>00044</fullName>
                <label>OEG - Major Accounts</label>
            </value>
            <value>
                <fullName>00045</fullName>
                <label>Capital Lending Group</label>
            </value>
            <value>
                <fullName>00046</fullName>
                <label>Wholesale</label>
            </value>
            <value>
                <fullName>00050</fullName>
                <label>Nat&apos;l Act.- Healthcare</label>
            </value>
            <value>
                <fullName>00060</fullName>
                <label>CO-Nat&apos;l/Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>