peac_dev/force-app/main/default/objects/Contract__c/fields/Branded_Phone__c.field-meta.xml
<CustomField>
    <fullName>Branded_Phone__c</fullName>
    <formula>IF( INCLUDES (  Program__c , &apos;XBS&apos; ), &apos;844-815-8934&apos;, &apos;888-299-6756&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branded Phone</label>
    <type>Text</type>
</CustomField>