peac_dev/force-app/main/default/objects/Contract__c/fields/Breakeven_Amount__c.field-meta.xml
<CustomField>
    <fullName>Breakeven_Amount__c</fullName>
    <label>Breakeven Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>