peac_dev/force-app/main/default/objects/Contract__c/fields/Broker_Fees__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fees__c</fullName>
    <label>Broker Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>