peac_dev/force-app/main/default/objects/Contract__c/fields/Charge_Off_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off_Recommendation__c</fullName>
    <label>Charge Off Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50/50 By EOM</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Monthly DD</fullName>
            </value>
            <value>
                <fullName>Non-Responsive No PG</fullName>
            </value>
            <value>
                <fullName>Non-Responsive With PG</fullName>
            </value>
            <value>
                <fullName>Pending Adjustment</fullName>
            </value>
            <value>
                <fullName>Pending Unwind</fullName>
            </value>
            <value>
                <fullName>Should or Will Pay By EOM</fullName>
            </value>
            <value>
                <fullName>Voluntary Repo</fullName>
            </value>
            <value>
                <fullName>Waiting on Equipment Return</fullName>
            </value>
            <value>
                <fullName>Will Not Pay By EOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>