peac_dev/force-app/main/default/objects/Contract__c/fields/Charges_AssessedWaived__c.field-meta.xml
<CustomField>
    <fullName>Charges_AssessedWaived__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Charges Assessed/Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>