peac_dev/force-app/main/default/objects/Contract__c/fields/Collection_Agency__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agency__c</fullName>
    <formula>NOT(ISPICKVAL(External_Collection_Agency__c, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Agency</label>
    <type>Checkbox</type>
</CustomField>