peac_dev/force-app/main/default/objects/Contract__c/fields/Collection_Agency_Placement_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agency_Placement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Agency Placement Date</label>
    <type>Date</type>
</CustomField>