peac_dev/force-app/main/default/objects/Contract__c/fields/Collection_Agency_Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agency_Placement_Type__c</fullName>
    <label>Collection Agency Placement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Fee</fullName>
            </value>
            <value>
                <fullName>Charge Off</fullName>
            </value>
            <value>
                <fullName>EOT</fullName>
            </value>
            <value>
                <fullName>State Restrictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>