peac_dev/force-app/main/default/objects/Contract__c/fields/Collection_Group__c.field-meta.xml
<CustomField>
    <fullName>Collection_Group__c</fullName>
    <label>Collection Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>31 EOT</fullName>
            </value>
            <value>
                <fullName>31 First Payment Default</fullName>
            </value>
            <value>
                <fullName>31 High Balance</fullName>
            </value>
            <value>
                <fullName>31 Regular</fullName>
            </value>
            <value>
                <fullName>31 Syndication</fullName>
            </value>
            <value>
                <fullName>31 Varadero</fullName>
            </value>
            <value>
                <fullName>61</fullName>
            </value>
            <value>
                <fullName>61 EOT</fullName>
            </value>
            <value>
                <fullName>61 Syndication</fullName>
            </value>
            <value>
                <fullName>91</fullName>
            </value>
            <value>
                <fullName>91 Syndication</fullName>
            </value>
            <value>
                <fullName>91+ EOT</fullName>
            </value>
            <value>
                <fullName>Agency Closed</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Closed</fullName>
            </value>
            <value>
                <fullName>Dead Contracts</fullName>
            </value>
            <value>
                <fullName>Dialer Do Not Call</fullName>
            </value>
            <value>
                <fullName>Dialer First Payment Default</fullName>
            </value>
            <value>
                <fullName>Dialer Regular</fullName>
            </value>
            <value>
                <fullName>Dialer Special</fullName>
            </value>
            <value>
                <fullName>Dialer TCF</fullName>
            </value>
            <value>
                <fullName>Dialer Team Assigned</fullName>
            </value>
            <value>
                <fullName>External Agencies</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Multiples</fullName>
            </value>
            <value>
                <fullName>Pending Equipment Return</fullName>
            </value>
            <value>
                <fullName>Pending Repo</fullName>
            </value>
            <value>
                <fullName>Placed With Attorney</fullName>
            </value>
            <value>
                <fullName>Pre-Charge Off</fullName>
            </value>
            <value>
                <fullName>Recovery Agents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>