peac_dev/force-app/main/default/objects/Contract__c/fields/Complaint_Case__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Case__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complaint Case #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>