peac_dev/force-app/main/default/objects/Contract__c/fields/Complaint_Memo__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Memo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complaint Memo</label>
    <type>TextArea</type>
</CustomField>