peac_dev/force-app/main/default/objects/Contract__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Muni</fullName>
            </value>
            <value>
                <fullName>CCP</fullName>
            </value>
            <value>
                <fullName>Outside Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>