peac_dev/force-app/main/default/objects/Contract__c/fields/Condition_report_received__c.field-meta.xml
<CustomField>
    <fullName>Condition_report_received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition Report Received</label>
    <type>Date</type>
</CustomField>