peac_dev/force-app/main/default/objects/Contract__c/fields/Confirmation_fromWarehsEqpmntReceived__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_fromWarehsEqpmntReceived__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmation from warehouse eqpmnt rcvd</label>
    <type>Date</type>
</CustomField>