peac_dev/force-app/main/default/objects/Contract__c/fields/Contract_Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Contract_Balance_Remaining__c</fullName>
    <label>Contract Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>