peac_dev/force-app/main/default/objects/Contract__c/fields/Current_Days_Delinquent__c.field-meta.xml
<CustomField>
    <fullName>Current_Days_Delinquent__c</fullName>
    <label>Current Days Delinquent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>