peac_dev/force-app/main/default/objects/Contract__c/fields/Current_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Current_Invoice__c</fullName>
    <label>Current Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>