peac_dev/force-app/main/default/objects/Contract__c/fields/Current_Rental_Payment__c.field-meta.xml
<CustomField>
    <fullName>Current_Rental_Payment__c</fullName>
    <label>Current  Rental Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>