peac_dev/force-app/main/default/objects/Contract__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer account</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>