peac_dev/force-app/main/default/objects/Contract__c/fields/Customer_Filter__c.field-meta.xml
<CustomField>
    <fullName>Customer_Filter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Filter</label>
    <length>250</length>
    <type>Text</type>
</CustomField>