peac_dev/force-app/main/default/objects/Contract__c/fields/Customer_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_name__c</fullName>
    <formula>Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer name</label>
    <type>Text</type>
</CustomField>