peac_dev/force-app/main/default/objects/Contract__c/fields/Customer_Payoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payoff_Amount__c</fullName>
    <label>Customer Payoff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>