peac_dev/force-app/main/default/objects/Contract__c/fields/Customer_Payoff_Created__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payoff_Created__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Payoff Created</label>
    <type>Date</type>
</CustomField>