peac_dev/force-app/main/default/objects/Contract__c/fields/Customer_Portal_Registered__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal Registered</label>
    <type>Checkbox</type>
</CustomField>