peac_dev/force-app/main/default/objects/Contract__c/fields/Customer_Portal_Username__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Portal Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>