peac_dev/force-app/main/default/objects/Contract__c/fields/Customer_Signed_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_By_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Signed By ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Custom_Contracts_Signed_By</relationshipName>
    <type>Lookup</type>
</CustomField>